appId: io.github.susimsek.kitezh.mobile
---
- stopApp
- launchApp:
    clearState: false
- extendedWaitUntil:
    visible: "Kitezh logo"
    timeout: 180000
- tapOn: "Settings|Ayarlar"
- assertVisible: "Settings|Ayarlar"
- tapOn: "English|İngilizce"
- assertVisible: "Settings"
- tapOn: "Turkish|Türkçe"
- assertVisible: "Ayarlar"
- assertVisible: "Görünüm"
- tapOn: "Koyu"
- assertVisible: "Koyu"
- tapOn: "Açık"
- assertVisible: "Açık"
